data/derived/sp14/progs/unify/prog1741.ml.out
Characters 15-18:
  let _ = sqsum [1.0;4.0];;
                 ^^^
Error: This expression has type float but an expression was expected of type
         int
